--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,5 +1,53 @@
-.Card{
+.card {
+    width: 200px;
+    height: 230px;
     background-image: url('../../assets/cards.png');
-    background-size: 20%;
+    opacity: 0.9;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    margin-bottom: 0px !important;
+    color: white;
+    font-size: medium;
 }
 
+.card:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    background-image: linear-gradient(to right, #ffffff8a, #000000c4);
+    box-shadow: 1px 1px 15px #ffffff;
+}
+
+.img {
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+    position: relative;
+    top: 0px;
+}
+
+.name {
+    margin-right: auto;
+    margin-left: auto;
+    width: auto;
+    font-size: 11px;
+    font-weight: bold;
+    padding: 8px 35px 8px 35px;
+    background-image: linear-gradient(to right, #ffffff, #000000);
+    border-radius: 30px;
+}
+
+.type{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    top: -100px;
+}
+
+.name:hover {
+    background-image: linear-gradient(to right, #d1e4d8, #000000);
+    box-shadow: 1px 1px 15px #ffffff;
+}
