--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -4,12 +4,14 @@ body{
 .body{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .nav{
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
     justify-content: center;
     background-color: #ffffff;
 }
@@ -17,10 +19,7 @@ body{
 .cards{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    justify-content: space-between;
-    align-content: space-between;
     gap: 1rem;
-    margin-left: 5%;
     margin-bottom: 0px;
     margin-top: 20px;
 }
@@ -55,4 +54,9 @@ body{
 
 .button:active {
     transform: translateY(-1px);
+}
+
+.loadingPokemons{
+    width: 25%;
+    height: 25%;
 }
