--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -19,15 +19,18 @@ div.inputBlock input {
 	outline:none;
 }
 div.inputBlock span.placeholder {
+	height: 45px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
 	position: absolute;
 	margin: 12px 0;
 	padding: 0 5px;
-	font-family: Roboto, sans-serif;
-	color:  #000;
 	display: flex;
 	align-items: center;
-	font-size: 1.1rem;
-	top: 0;
+	top: -12px;
 	left: 17px;
 	transition: all 0.2s;
 	transform-origin: 0% 0%;
