--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .img {
-    width: 100%;
-    height: 50%;
+    width: 150px;
+    height: 148px;
     border-radius: 10px;
     position: relative;
     top: 0px;
